// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Accordion renders correctly 1`] = `
<jest>
  <div
    class="ecl-accordion"
    data-ecl-accordion=""
    data-ecl-auto-init="Accordion"
  >
    <div
      class="ecl-accordion__item is-first"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example-title"
      >
        <button
          aria-controls="accordion-example-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example-content"
        role="region"
      >
        The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
      </div>
    </div>
    <div
      class="ecl-accordion__item"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example2-title"
      >
        <button
          aria-controls="accordion-example2-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Spring 2019 Economic Forecast: Growth continues at a more moderate pace
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example2-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example2-content"
        role="region"
      >
        The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
      </div>
    </div>
    <div
      class="ecl-accordion__item is-last"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example3-title"
      >
        <button
          aria-controls="accordion-example3-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example3-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example3-content"
        role="region"
      >
        In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Accordion renders correctly with a single icon 1`] = `
<jest>
  <div
    class="ecl-accordion"
    data-ecl-accordion=""
    data-ecl-auto-init="Accordion"
  >
    <div
      class="ecl-accordion__item is-first"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example-title"
      >
        <button
          aria-controls="accordion-example-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--corner-arrow"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example-content"
        role="region"
      >
        The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
      </div>
    </div>
    <div
      class="ecl-accordion__item"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example2-title"
      >
        <button
          aria-controls="accordion-example2-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Spring 2019 Economic Forecast: Growth continues at a more moderate pace
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--corner-arrow"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example2-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example2-content"
        role="region"
      >
        The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
      </div>
    </div>
    <div
      class="ecl-accordion__item is-last"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example3-title"
      >
        <button
          aria-controls="accordion-example3-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--corner-arrow"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example3-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example3-content"
        role="region"
      >
        In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Accordion renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-accordion"
    data-ecl-accordion=""
    data-ecl-auto-init="Accordion"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-accordion__item is-first"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example-title"
      >
        <button
          aria-controls="accordion-example-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example-content"
        role="region"
      >
        The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
      </div>
    </div>
    <div
      class="ecl-accordion__item"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example2-title"
      >
        <button
          aria-controls="accordion-example2-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Spring 2019 Economic Forecast: Growth continues at a more moderate pace
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example2-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example2-content"
        role="region"
      >
        The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
      </div>
    </div>
    <div
      class="ecl-accordion__item is-last"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example3-title"
      >
        <button
          aria-controls="accordion-example3-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example3-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example3-content"
        role="region"
      >
        In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Accordion renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-accordion custom-class custom-class--test"
    data-ecl-accordion=""
    data-ecl-auto-init="Accordion"
  >
    <div
      class="ecl-accordion__item is-first"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example-title"
      >
        <button
          aria-controls="accordion-example-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example-content"
        role="region"
      >
        The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
      </div>
    </div>
    <div
      class="ecl-accordion__item"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example2-title"
      >
        <button
          aria-controls="accordion-example2-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Spring 2019 Economic Forecast: Growth continues at a more moderate pace
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example2-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example2-content"
        role="region"
      >
        The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
      </div>
    </div>
    <div
      class="ecl-accordion__item is-last"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example3-title"
      >
        <button
          aria-controls="accordion-example3-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example3-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example3-content"
        role="region"
      >
        In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
      </div>
    </div>
  </div>
</jest>
`;

exports[`Accordion renders correctly with old data 1`] = `
<jest>
  <div
    class="ecl-accordion"
    data-ecl-accordion=""
    data-ecl-auto-init="Accordion"
  >
    <div
      class="ecl-accordion__item is-first"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example-title"
      >
        <button
          aria-controls="accordion-example-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example-content"
        role="region"
      >
        The College of Commissioners held today the first weekly meeting of 2019 which was devoted to discussing the challenges of this new year. Commissioners used the opportunity to take stock and discuss the year ahead, including the European elections in May and other important milestones ahead.
      </div>
    </div>
    <div
      class="ecl-accordion__item"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example2-title"
      >
        <button
          aria-controls="accordion-example2-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Spring 2019 Economic Forecast: Growth continues at a more moderate pace
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example2-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example2-content"
        role="region"
      >
        The European economy is forecast to continue expanding for the seventh year in a row in 2019, with real GDP expected to grow in all EU Member States. As global uncertainties continue to weigh, domestic dynamics are set to support the European economy. Growth is expected to gather pace again next year.
      </div>
    </div>
    <div
      class="ecl-accordion__item is-last"
    >
      <div
        class="ecl-accordion__title"
        id="accordion-example3-title"
      >
        <button
          aria-controls="accordion-example3-content"
          aria-expanded="false"
          class="ecl-accordion__toggle"
          data-ecl-accordion-toggle=""
          type="button"
        >
          <span
            class="ecl-accordion__toggle-flex"
          >
            <span
              class="ecl-accordion__toggle-title"
            >
              Delivery of last pending proposals, a common Destiny of unity, the hour of European Democracy
            </span>
            <span
              class="ecl-accordion__toggle-indicator"
            >
              <span
                aria-hidden="true"
                class="wt-icon--plus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--plus"
                data-ecl-accordion-icon=""
              />
              <span
                aria-hidden="true"
                class="wt-icon--minus ecl-icon ecl-icon--s ecl-accordion__toggle-icon ecl-icon--minus"
                data-ecl-accordion-icon=""
              />
            </span>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="accordion-example3-title"
        class="ecl-accordion__content"
        hidden=""
        id="accordion-example3-content"
        role="region"
      >
        In the modern global economy trade is essential for growth, jobs and competiveness, and the EU is committed to maintaining an open and rules-based trading system. With the rising threat of protectionism and weakened commitment of large players to global trade governance, the EU must take the lead.
      </div>
    </div>
  </div>
</jest>
`;
